# chandraobs

./: .dockerignore  .ghci  .gitignore  Dockerfile  Dockerfile.redirect  Dockerfile.tools  Makefile  Procfile  README.md  Setup.hs  add-commit.sh  chandraobs.cabal  chandraobs.nix  configure  default.nix  drop-all.sql  heroku-compile-post-script.sh  hie.yaml  release.nix  shell.nix  stack-ghc8.10.yaml  stack-ghc8.8.yaml  stack-ghc9.0.yaml  stack.yaml
app/: API.hs  About.hs  Cache.hs  Database.hs  Layout.hs  Utils.hs  WebServer.hs
app/Views/: About.hs  Index.hs  NotFound.hs  Proposal.hs  Record.hs  Render.hs  Schedule.hs  Timeline.hs  WWT.hs
app/Views/Search/: Calendar.hs  Category.hs  Constellation.hs  Constraint.hs  Cycle.hs  ExposureRanges.hs  Instrument.hs  Mapping.hs  Mission.hs  PropType.hs  SubArrays.hs  TOO.hs  Target.hs  Types.hs
autogen/: about-index.html.in  lib-Git.hs.in
lib/: Database.hs  Git.hs  Instances.hs  Sorted.hs  Types.hs  Types.hs.OLD
nix/: default.nix  sources.json
notes/: build.md  database.md  display.md  heroku.md  missing-obsids.txt  nix.md  notes.md  rel8.md  simbad.md
scripts/: cal2gif
static/: chandra.wtml  index2.html  robots.txt
static/about/: changelog.html  index.html  instruments.html  views.html
static/browse/: index.html
static/css/: about.css  breakdown.css  calendar.css  category.css  constellation.css  exposure.css  main.css  mapping.css  mission.css  schedule.css  search.css  simbad-tree.css  simbad.css  subarrays.css  tablesorter.css  timeline.css  view.css  wwt.css
static/css/browse/: main.css  sky.css
static/css/test/: main.css  sky.css  spinner.css
static/data/: constellations.bounds-hack.json  mw-hack.json  timeline-schema.js
static/js/: base.js  box-plot.js  breakdown-view.js  calendar-view.js  d3.sankey.js  exposure.js  image-switch.js  main.js  main2.js  mapping-view.js  projection.js  raprojection.js  save-d3-as-svg.js  simbad-tree.js  subarray-view.js  table.js  tour.js  wwt.js
static/js/browse/: lookup.js  main.js  sky.js  spinner.js
static/js/test/: draggable.js  lookup.js  main.js  sky.js
static/search/: index.html  timeline.html
static/search/exposures/: index.html
static/test/: index.html
test/: go-nix.sh  invalid-obsids  testrel8.cabal
test/lib/: Database.hs  Types.hs
test/tools/: CheckObsId.hs  OCAT.hs  UpdateSchedule.hs
tools/: AddObsidList.hs  Database.hs  ExploreTelescopes.hs  GetCalendar.hs  GetCurrent.hs  GetProposals.hs  GetSchedule.hs  GetTimeline.hs  HackData.hs  HackGeo.hs  HackMW.hs  InitDB.hs  ListMissingObsids.hs  ListUnobservedObsids.hs  OCAT.hs  ObsCat.hs  Parser.hs  PersistentTypes.hs  QueryObsid.hs  QuerySimbad.hs  Quote.hs  Redirect.hs  Test.hs  Types.hs  UpdateObsidList.hs  UpdateSchedule.hs  oldscheds.html
