name:                chandraobs
version:             0.6.1
stability:           experimental
synopsis:            What is the Chandra Observatory doing?
license:             PublicDomain
author:              Doug Burke
maintainer:          dburke.gw@gmail.com
category:            Web

description:
  Eventually I want a web page describing what the Chandra
  X-Ray observatory is currently doing, including links to
  related observations, press releases, the ADS output of
  the Principal Investigator, a link to the source 
  viewable in WorldWideTelescope, etc.
  .
  At present it is just a technology tester.

homepage:            https://github.com/DougBurke/chandraobs

build-type:          Simple

cabal-version:       2.0

flag server
  description: build the webserver
  default: True

flag redirectserver
  description: build the redirection webserver
  default: False

flag tools
  description: build the command-line tools
  default: False

library
  default-language: Haskell2010
  hs-source-dirs: lib/

  exposed-modules:
                  Database
                  Git
                  Instances
                  Sorted
                  Types

  -- autogen-modules: Git

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(server) || flag(tools)
    build-depends:
       -- I need the ToJSON instance for Day, which means 0.10 or higher, but
       -- 0.10 is now considered "bad", and there appear to be build issues
       -- for aeson 0.11 before .1.4, so exclude them just in case.
       --
       aeson >= 0.11.1.4 && < 2.1
       , base >= 4.9 && < 5.0
       , blaze-html >= 0.7 && < 0.10
       , bytestring == 0.10.*
       -- scrabbling around trying to get nixtools to work
       -- and was hoping this might get nix-build to work, but
       -- alas it does not
       , Cabal
       , containers >= 0.4 && < 0.7
       , formatting >= 6.2 && < 7.2
       , groundhog >= 0.8 && < 0.13
       , groundhog-postgresql >= 0.8 && < 0.13
       , groundhog-th >= 0.8 && < 0.13
       , heroku == 0.1.*
       , http-types >= 0.8 && < 1.0
       , monad-control == 1.0.*
       , scotty >= 0.7 && < 0.13
       , split == 0.2.*
       , text >= 1.0 && < 1.3
       , time >= 1.5 && < 1.10
       , transformers >= 0.3 && < 0.6
       , vector >= 0.12 && < 0.13         
       , vector-algorithms >= 0.8 && < 0.9
       , zlib == 0.6.*

  else
    buildable:  False

           
executable webserver
  default-language: Haskell2010
  main-is:             WebServer.hs
  other-modules:       About
                       API
                       Cache
                       Layout
                       Utils
                       Views.Index
                       Views.NotFound
                       Views.Proposal
                       Views.Record
                       Views.Render
                       Views.Schedule
                       Views.Timeline
                       Views.Search.Calendar
                       Views.Search.Category
                       Views.Search.Constellation
                       Views.Search.Constraint
                       Views.Search.Cycle
                       Views.Search.ExposureRanges
                       Views.Search.Instrument
                       Views.Search.Mapping
                       Views.Search.Mission
                       Views.Search.PropType
                       Views.Search.SubArrays
                       Views.Search.Target
                       Views.Search.Types
                       Views.Search.TOO
  hs-source-dirs:      app/

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(server)
    build-depends:
       aeson
       , base
       , blaze-builder >= 0.3 && < 0.5
       , blaze-html
       , blaze-markup
       , bytestring
       , conduit >= 1.1 && < 1.4
       , containers
       , chandraobs
       , data-default >= 0.5 && < 0.8
       , formatting
       , groundhog
       , groundhog-postgresql
       , http-types
       , hvega >= 0.11 && < 0.13
       , mtl == 2.2.*
       , random >= 1.0 && < 1.3
       , resource-pool == 0.2.*
       , scotty
       , split
       , text
       , time
       , transformers
       , wai-middleware-static >= 0.8.3 && < 0.10
       , warp >= 2.1 && < 3.4

  else
    buildable:  False

           
-- redirect is a lot simpler     
executable redirect
  default-language: Haskell2010
  main-is:             Redirect.hs
  hs-source-dirs:      tools/

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(redirectserver)
    build-depends:
       base
       , http-types
       , wai >= 3.2 && < 3.4
       , warp

  else
    buildable:  False

           
executable getschedule
  default-language: Haskell2010
  main-is:             GetSchedule.hs
  hs-source-dirs:      tools/
  other-modules:       Parser
                       OCAT
                                              
  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     -- TODO: may want to store the ocat output as files
     -- , directory >= 1.2 && < 1.4
     , formatting
     , groundhog
     , groundhog-postgresql
     , http-conduit >= 2.1 && < 2.4
     , http-types
     , parsec == 3.1.*
     , process >= 1.1 && < 1.7
     , tagsoup >= 0.13 && < 0.15
     , temporary >= 1.1 && < 1.4
     , text
     , time

  else
    buildable:  False

executable updateschedule
  default-language: Haskell2010
  main-is:             UpdateSchedule.hs
  hs-source-dirs:      tools/
  other-modules:       OCAT
                                              
  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     , formatting
     , groundhog
     , groundhog-postgresql
     , http-conduit
     , http-types
     , process
     , tagsoup
     , temporary
     , text
     , time

  else
    buildable:  False

executable addobsidlist
  default-language: Haskell2010
  main-is:             AddObsidList.hs
  hs-source-dirs:      tools/
  other-modules:       OCAT
                                              
  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     -- TODO: may want to store the ocat output as files
     -- , directory >= 1.2 && < 1.4
     , formatting
     , groundhog
     , groundhog-postgresql
     , http-conduit >= 2.1 && < 2.4
     , http-types
     , process >= 1.1 && < 1.7
     , tagsoup >= 0.13 && < 0.15
     , temporary >= 1.1 && < 1.4
     , text
     , time

  else
    buildable:  False

executable updateobsidlist
  default-language: Haskell2010
  main-is:             UpdateObsidList.hs
  hs-source-dirs:      tools/
  other-modules:       OCAT
                                              
  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     -- TODO: may want to store the ocat output as files
     -- , directory >= 1.2 && < 1.4
     , formatting
     , groundhog
     , groundhog-postgresql
     , http-conduit >= 2.1 && < 2.4
     , http-types
     , process >= 1.1 && < 1.7
     , tagsoup >= 0.13 && < 0.15
     , temporary >= 1.1 && < 1.4
     , text
     , time

  else
    buildable:  False

executable listmissingobsids
  default-language: Haskell2010
  main-is:             ListMissingObsids.hs
  hs-source-dirs:      tools/
                                              
  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     , groundhog
     -- , groundhog-postgresql
     , text

  else
    buildable:  False

executable querysimbad
  default-language: Haskell2010
  main-is:             QuerySimbad.hs
  hs-source-dirs:      tools/

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     , formatting
     , groundhog-postgresql
     , http-conduit
     , http-types
     , split
     , text
     , time
     , transformers

  else
    buildable:  False

executable queryobsid
  default-language: Haskell2010
  main-is:             QueryObsid.hs
  hs-source-dirs:      tools/
  other-modules:       OCAT

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     , formatting
     , groundhog
     , groundhog-postgresql
     , http-conduit >= 2.1 && < 2.4
     , http-types
     , process >= 1.1 && < 1.7
     , tagsoup >= 0.13 && < 0.15
     , temporary >= 1.1 && < 1.4
     , text
     , time

  else
    buildable:  False

executable getcurrent
  default-language: Haskell2010
  main-is:             GetCurrent.hs
  hs-source-dirs:      tools/

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , chandraobs
     , groundhog-postgresql
     , text
     , time

  else
    buildable:  False

executable getproposals
  default-language: Haskell2010
  main-is:             GetProposals.hs
  hs-source-dirs:      tools/
  other-modules:       OCAT

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , bytestring
     , chandraobs
     , containers
     , formatting
     , groundhog
     , groundhog-postgresql
     , http-conduit
     , http-types
     , process
     , tagsoup
     , temporary
     , text
     , time

  else
    buildable:  False


executable gettimeline
  default-language: Haskell2010
  main-is:             GetTimeline.hs
  hs-source-dirs:      tools/

  -- ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  ghc-options: -Wall -Wincomplete-record-updates

  if flag(tools)
    build-depends:
     base
     , chandraobs
     , containers
     , groundhog
     , groundhog-postgresql
     , formatting
     , text
     , time

  else
    buildable:  False


-- This isn't working and is it necessary?
--
-- data-files:
--       static/chandra.wtml
--       static/robots.txt
--       static/about/*.html
--       static/about/*.png
--       static/css/*.css
--       static/css/*.gif
--       static/css/test/*.css
--       static/data/*.json
--       static/data/*.js
--       static/img/*.gif
--       static/img/*.svg
--       static/js/*.js
--       static/js/test/*.js
--       static/search/*.html
--       static/search/exposures/*.html
--       static/test/*.html
